--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-loader-spinner": "^6.0.0-0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
